Fourth commit - Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port= 2710
+
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
